--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"private": true,
+	"author": "Truyen Mai",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "concurrently  \"nodemon --trace-deprecation app.js\" \"npm run storybook\"",
+		"dev-next": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"storybook": "start-storybook -p 6006",
@@ -9,16 +11,18 @@
 	},
 	"dependencies": {
 		"@craftjs/core": "^0.2.0-beta.8",
-		"next": "latest",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"sass": "^1.55.0",
 		"clsx": "^1.1.1",
 		"dotenv": "^16.0.0",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
+		"next": "latest",
+		"primeicons": "^6.0.1",
+		"primereact": "^8.6.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
 		"redux": "^4.2.0",
-		"redux-thunk": "^2.4.1"
+		"redux-thunk": "^2.4.1",
+		"sass": "^1.55.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
@@ -36,15 +40,15 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
+		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
+		"module-alias": "^2.2.2",
 		"mongoose": "^5.13.14",
 		"multer": "^1.4.4",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.7.2",
 		"nodemon": "^2.0.15",
 		"shortid": "^2.2.16",
-		"slugify": "^1.6.4",
-		"jsonwebtoken": "^8.5.1",
-		"module-alias": "^2.2.2"
+		"slugify": "^1.6.4"
 	}
 }
