--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"author": "Truyen Mai",
+	"type": "module",
 	"scripts": {
 		"dev": "concurrently  \"nodemon --trace-deprecation app.js\" \"npm run storybook\"",
 		"dev-next": "next dev",
@@ -11,13 +12,17 @@
 	},
 	"dependencies": {
 		"@craftjs/core": "^0.2.0-beta.8",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"@fontsource/roboto": "^4.5.8",
+		"@mui/icons-material": "^5.10.9",
+		"@mui/material": "^5.10.10",
+		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
-		"dotenv": "^16.0.0",
+		"dotenv": "^16.0.3",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"next": "latest",
-		"primeicons": "^6.0.1",
-		"primereact": "^8.6.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"redux": "^4.2.0",
