--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "concurrently  \"nodemon --trace-deprecation app.js\" \"npm run storybook\"",
 		"dev-only": "concurrently  \"nodemon --trace-deprecation app.js\"",
 		"dev-next": "next dev",
+		"dev-start": "node app.js",
 		"build": "next build",
 		"start": "next start",
 		"storybook": "start-storybook -p 6006",
@@ -13,6 +14,8 @@
 	},
 	"dependencies": {
 		"@craftjs/core": "^0.2.0-beta.8",
+		"@rsuite/icons": "^1.0.2",
+		"apexcharts": "^3.35.4",
 		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
 		"dotenv": "^16.0.3",
@@ -20,15 +23,15 @@
 		"moment": "^2.29.1",
 		"next": "latest",
 		"react": "17.0.2",
+		"react-apexcharts": "^1.4.0",
 		"react-dom": "17.0.2",
+		"react-icons": "^4.4.0",
+		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.1",
 		"rsuite": "^5.21.0",
 		"sass": "^1.55.0",
-		"@rsuite/icons": "^1.0.2",
-		"apexcharts": "^3.35.4",
-		"react-icons": "^4.4.0",
-		"react-apexcharts": "^1.4.0"
+		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
