apply upload file

--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
 	"author": "Truyen Mai",
 	"type": "module",
 	"scripts": {
-		"dev": "concurrently  \"nodemon --trace-deprecation app.js\" \"npm run storybook\"",
-		"dev-only": "concurrently  \"nodemon --trace-deprecation app.js\"",
+		"dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\" \"npm run storybook\"",
+		"dev-only": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
 		"dev-next": "next dev",
-		"dev-start": "node app.js",
+		"dev-start": "node --experimental-specifier-resolution=node app.js",
 		"build": "next build",
 		"start": "next start",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook"
 	},
+	"imports": {
+		"#server/*": "./server/*",
+		"#controller/*": "./server/controller/*",
+		"#middleware": "./server/middleware/index.js",
+		"#route/*": "./server/route/*",
+		"#model": "./server/model/index.js",
+		"#uploads/*": "./uploads/*"
+	},
 	"dependencies": {
 		"@craftjs/core": "^0.2.0-beta.8",
 		"@rsuite/icons": "^1.0.2",
 		"apexcharts": "^3.35.4",
+		"body-parser": "^1.20.1",
 		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
+		"connect-multiparty": "^2.2.0",
 		"dotenv": "^16.0.3",
+		"express-formidable": "^1.2.0",
+		"express-validator": "^6.14.2",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
+		"multiparty": "^4.2.3",
 		"next": "latest",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.4.0",
@@ -51,9 +64,8 @@
 		"express": "^4.17.2",
 		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
-		"module-alias": "^2.2.2",
 		"mongoose": "^5.13.14",
-		"multer": "^1.4.4",
+		"multer": "^1.4.5-lts.1",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.7.2",
 		"nodemon": "^2.0.15",
