--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
+## lock 
+
+package-lock.json
+/uploads/**
+
 # local env files
 .env.local
 .env.development.local
