--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
 	"author": "Truyen Mai",
 	"type": "module",
 	"scripts": {
-		"dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\" \"npm run storybook\"",
+		"dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
 		"dev-only": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
 		"dev-next": "next dev",
 		"dev-start": "node --experimental-specifier-resolution=node app.js",
 		"build": "next build",
-		"start": "next start",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"start": "next start"
 	},
 	"imports": {
 		"#server/*": "./server/*",
@@ -24,16 +22,13 @@
 		"@craftjs/core": "^0.2.0-beta.8",
 		"@rsuite/icons": "^1.0.2",
 		"apexcharts": "^3.35.4",
-		"body-parser": "^1.20.1",
+		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
-		"connect-multiparty": "^2.2.0",
 		"dotenv": "^16.0.3",
-		"express-formidable": "^1.2.0",
 		"express-validator": "^6.14.2",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
-		"multiparty": "^4.2.3",
 		"next": "latest",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.4.0",
@@ -48,20 +43,12 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
-		"@storybook/addon-actions": "^6.5.12",
-		"@storybook/addon-essentials": "^6.5.12",
-		"@storybook/addon-interactions": "^6.5.12",
-		"@storybook/addon-links": "^6.5.12",
-		"@storybook/builder-webpack5": "^6.5.12",
-		"@storybook/manager-webpack5": "^6.5.12",
-		"@storybook/react": "^6.5.12",
-		"@storybook/testing-library": "^0.0.13",
 		"babel-loader": "^8.2.5",
 		"bcryptjs": "^2.4.3",
 		"concurrently": "^7.3.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
-		"express": "^4.17.2",
+		"express": "^4.18.2",
 		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
 		"mongoose": "^5.13.14",
