--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"redux-thunk": "^2.4.1",
 		"rsuite": "^5.21.0",
 		"sass": "^1.55.0",
-		"slick-carousel": "^1.8.1"
+		"slick-carousel": "^1.8.1",
+		"zustand": "^4.1.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.3",
