--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
 		"#uploads/*": "./uploads/*"
 	},
 	"dependencies": {
-		"@craftjs/core": "^0.2.0-beta.8",
+		"@ckeditor/ckeditor5-basic-styles": "^35.3.0",
+		"@ckeditor/ckeditor5-build-classic": "^35.3.0",
+		"@ckeditor/ckeditor5-core": "^35.3.0",
+		"@ckeditor/ckeditor5-editor-classic": "^35.3.0",
+		"@ckeditor/ckeditor5-essentials": "^35.3.0",
+		"@ckeditor/ckeditor5-paragraph": "^35.3.0",
+		"@ckeditor/ckeditor5-react": "^5.0.2",
 		"@rsuite/icons": "^1.0.2",
 		"apexcharts": "^3.35.4",
 		"axios": "^1.1.3",
@@ -49,6 +55,7 @@
 		"concurrently": "^7.3.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"css-loader": "^6.7.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
