--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
-		"dotenv": "^16.0.3",
-		"express-validator": "^6.14.2",
+		"html-react-parser": "^3.0.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"next": "latest",
@@ -56,9 +55,12 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"css-loader": "^6.7.1",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
+		"metatags-generator": "^1.1.8",
 		"mongoose": "^5.13.14",
 		"multer": "^1.4.5-lts.1",
 		"node-cron": "^3.0.0",
