create modal product , variant

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-apexcharts": "^1.4.0",
 		"react-dom": "17.0.2",
 		"react-icons": "^4.4.0",
+		"react-json-tree": "^0.17.0",
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.1",
@@ -61,7 +62,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
 		"metatags-generator": "^1.1.8",
-		"mongoose": "^5.13.14",
+		"mongoose": "^6.7.2",
 		"multer": "^1.4.5-lts.1",
 		"node-cron": "^3.0.0",
 		"nodemailer": "^6.7.2",
