--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"clsx": "^1.1.1",
+		"currency-formatter": "^1.5.9",
 		"html-react-parser": "^3.0.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
