--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"react-dom": "17.0.2",
 		"react-icons": "^4.4.0",
 		"react-json-tree": "^0.17.0",
+		"react-number-format": "^5.1.1",
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.1",
