--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"next": "latest",
+		"puppeteer": "^19.2.2",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.4.0",
 		"react-dom": "17.0.2",
