--- a/package.json
+++ b/package.json
@@ -1,77 +1,78 @@
 {
-	"private": true,
-	"author": "Truyen Mai",
-	"type": "module",
-	"scripts": {
-		"dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
-		"dev-only": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
-		"dev-next": "next dev",
-		"dev-start": "node --experimental-specifier-resolution=node app.js",
-		"build": "next build",
-		"start": "next start"
-	},
-	"imports": {
-		"#server/*": "./server/*",
-		"#controller/*": "./server/controller/*",
-		"#middleware": "./server/middleware/index.js",
-		"#route/*": "./server/route/*",
-		"#model": "./server/model/index.js",
-		"#uploads/*": "./uploads/*"
-	},
-	"dependencies": {
-		"@ckeditor/ckeditor5-basic-styles": "^35.3.0",
-		"@ckeditor/ckeditor5-build-classic": "^35.3.0",
-		"@ckeditor/ckeditor5-core": "^35.3.0",
-		"@ckeditor/ckeditor5-editor-classic": "^35.3.0",
-		"@ckeditor/ckeditor5-essentials": "^35.3.0",
-		"@ckeditor/ckeditor5-paragraph": "^35.3.0",
-		"@ckeditor/ckeditor5-react": "^5.0.2",
-		"@rsuite/icons": "^1.0.2",
-		"apexcharts": "^3.35.4",
-		"axios": "^1.1.3",
-		"bootstrap": "^5.2.2",
-		"clsx": "^1.1.1",
-		"currency-formatter": "^1.5.9",
-		"html-react-parser": "^3.0.4",
-		"lodash": "^4.17.21",
-		"moment": "^2.29.1",
-		"next": "latest",
-		"puppeteer": "^19.2.2",
-		"react": "17.0.2",
-		"react-apexcharts": "^1.4.0",
-		"react-dom": "17.0.2",
-		"react-icons": "^4.4.0",
-		"react-json-tree": "^0.17.0",
-		"react-number-format": "^5.1.1",
-		"react-slick": "^0.29.0",
-		"redux": "^4.2.0",
-		"redux-thunk": "^2.4.1",
-		"rsuite": "^5.21.0",
-		"sass": "^1.55.0",
-		"slick-carousel": "^1.8.1",
-		"zustand": "^4.1.4"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.19.3",
-		"babel-loader": "^8.2.5",
-		"bcryptjs": "^2.4.3",
-		"concurrently": "^7.3.0",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"css-loader": "^6.7.1",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"express-validator": "^6.14.2",
-		"jsonwebtoken": "^8.5.1",
-		"md5": "^2.3.0",
-		"metatags-generator": "^1.1.8",
-		"mongoose": "^6.7.2",
-		"multer": "^1.4.5-lts.1",
-		"node-cron": "^3.0.0",
-		"nodemailer": "^6.7.2",
-		"nodemon": "^2.0.15",
-		"shortid": "^2.2.16",
-		"slugify": "^1.6.4",
-		"typescript": "4.8.4"
-	}
+  "private": true,
+  "author": "Truyen Mai",
+  "type": "module",
+  "scripts": {
+    "dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
+    "dev-only": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
+    "dev-next": "next dev",
+    "dev-start": "node --experimental-specifier-resolution=node app.js",
+    "build": "next build",
+    "start": "next start"
+  },
+  "imports": {
+    "#server/*": "./server/*",
+    "#controller/*": "./server/controller/*",
+    "#middleware": "./server/middleware/index.js",
+    "#route/*": "./server/route/*",
+    "#model": "./server/model/index.js",
+    "#constant/*": "./server/constant/*",
+    "#uploads/*": "./uploads/*"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^35.3.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.3.0",
+    "@ckeditor/ckeditor5-core": "^35.3.0",
+    "@ckeditor/ckeditor5-editor-classic": "^35.3.0",
+    "@ckeditor/ckeditor5-essentials": "^35.3.0",
+    "@ckeditor/ckeditor5-paragraph": "^35.3.0",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@rsuite/icons": "^1.0.2",
+    "apexcharts": "^3.35.4",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "clsx": "^1.1.1",
+    "currency-formatter": "^1.5.9",
+    "html-react-parser": "^3.0.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "next": "latest",
+    "puppeteer": "^19.2.2",
+    "react": "17.0.2",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
+    "react-json-tree": "^0.17.0",
+    "react-number-format": "^5.1.1",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "rsuite": "^5.21.0",
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
+    "zustand": "^4.1.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "babel-loader": "^8.2.5",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.3.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "metatags-generator": "^1.1.8",
+    "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "shortid": "^2.2.16",
+    "slugify": "^1.6.4",
+    "typescript": "4.8.4"
+  }
 }
