--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ckeditor/ckeditor5-paragraph": "^35.3.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "@rsuite/icons": "^1.0.2",
-    "apexcharts": "^3.35.4",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "clsx": "^1.1.1",
@@ -37,18 +36,12 @@
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "next": "latest",
-    "node-mailjet": "^5.1.1",
-    "puppeteer": "^19.2.2",
-    "react": "17.0.2",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "17.0.2",
+    "next": "^12.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
-    "react-json-tree": "^0.17.0",
     "react-number-format": "^5.1.1",
     "react-slick": "^0.29.0",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
     "rsuite": "^5.21.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
@@ -71,8 +64,10 @@
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.0",
+    "node-mailjet": "^5.1.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "puppeteer": "^19.2.2",
     "shortid": "^2.2.16",
     "slugify": "^1.6.4",
     "typescript": "4.8.4"
