--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "^12.3.4",
+    "next-seo": "^5.15.0",
     "query-string": "^8.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
