--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "author": "Truyen Mai",
   "type": "module",
   "scripts": {
-    "dev": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js \" \"npm run dev-next\" ",
-    "start": "concurrently  \"npm run next-start\" \"node --experimental-specifier-resolution=node --trace-deprecation app.js\"",
-    "dev-only": "concurrently  \"nodemon --experimental-specifier-resolution=node --trace-deprecation app.js\"",
-    "dev-next": "next dev --port=3002",
+    "dev": "concurrently  \"npm run dev-sv \" \"npm run dev-next\" ",
+    "start": "concurrently  \"npm run next-start\" \"\"npm run sv",
+    "dev-sv": "nodemon --experimental-specifier-resolution=node --trace-deprecation app.js",
+    "sv": "node --experimental-specifier-resolution=node --trace-deprecation app.js",
+    "dev-next": "next dev --port=3002 ",
     "dev-start": "node --experimental-specifier-resolution=node app.js",
-    "build": "next build",
+    "build": "SET NODE_OPTIONS=--max_old_space_size=512 && next build",
     "next-start": "next start --port=3004"
   },
   "imports": {
@@ -58,6 +59,7 @@
     "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
