--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sv": "node --experimental-specifier-resolution=node --trace-deprecation app.js",
     "dev-next": "next dev --port=3002 ",
     "dev-start": "node --experimental-specifier-resolution=node app.js",
-    "build": "SET NODE_OPTIONS=--max_old_space_size=512 && next build",
+    "build:prod": "cross-env --max-old-space-size=500 next build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8000 next build",
     "next-start": "next start --port=3004"
   },
   "imports": {
@@ -76,6 +77,8 @@
     "puppeteer": "^19.2.2",
     "shortid": "^2.2.16",
     "slugify": "^1.6.4",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.75.0"
   }
 }
