--- a/package.json
+++ b/package.json
@@ -50,23 +50,7 @@
     "rsuite": "^5.21.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
-    "zustand": "^4.1.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "babel-loader": "^8.2.5",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^7.3.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
-    "metatags-generator": "^1.1.8",
+    "zustand": "^4.1.4",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.0",
@@ -76,6 +60,22 @@
     "puppeteer": "^19.2.2",
     "shortid": "^2.2.16",
     "slugify": "^1.6.4",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "metatags-generator": "^1.1.8",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.3.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "typescript": "4.8.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.75.0"
