--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ LOGO="/public/assets/logo.png"
 CANONICAL="https://khamobile.vn"
 APP_NAME="Kha Mobile"
 HOST='https://khamobile.vn'
-API="https://api.truyenmai.com"
+API="https://app.khamobile.vn"
 GG_CLIENT_ID='499784443670-mtsk6fbmrhfu32oed349tvtduqj4snpl.apps.googleusercontent.com'
 GG_CLIENT_SECRET='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'
 EXPIRE_TIME="15d"
