--- a/package.json
+++ b/package.json
@@ -33,14 +33,30 @@
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "@rsuite/icons": "^1.0.2",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
     "clsx": "^1.1.1",
+    "concurrently": "^7.3.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "currency-formatter": "^1.5.9",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "html-react-parser": "^3.0.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
+    "metatags-generator": "^1.1.8",
     "moment": "^2.29.1",
+    "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "next": "^12.3.4",
     "next-seo": "^5.15.0",
+    "node-cron": "^3.0.0",
+    "node-mailjet": "^5.1.1",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "puppeteer": "^19.2.2",
     "query-string": "^8.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,26 +65,11 @@
     "react-slick": "^0.29.0",
     "rsuite": "^5.21.0",
     "sass": "^1.55.0",
-    "slick-carousel": "^1.8.1",
-    "zustand": "^4.1.4",
-    "mongoose": "^6.7.2",
-    "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.0",
-    "node-mailjet": "^5.1.1",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15",
-    "puppeteer": "^19.2.2",
+    "sharp": "^0.31.3",
     "shortid": "^2.2.16",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.4",
-    "express": "^4.18.2",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
-    "metatags-generator": "^1.1.8",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^7.3.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5"
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -77,7 +78,6 @@
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.3",
     "typescript": "4.8.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.75.0"
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
