--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "#common/*": "./server/common/*"
   },
   "dependencies": {
+    "@analytics/google-analytics": "^1.0.5",
+    "@analytics/google-tag-manager": "^0.5.3",
     "@ckeditor/ckeditor5-basic-styles": "^35.3.0",
     "@ckeditor/ckeditor5-build-classic": "^35.3.0",
     "@ckeditor/ckeditor5-core": "^35.3.0",
@@ -32,9 +34,12 @@
     "@ckeditor/ckeditor5-paragraph": "^35.3.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "@rsuite/icons": "^1.0.2",
+    "analytics": "^0.8.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.2.1",
     "clsx": "^1.1.1",
     "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
@@ -58,6 +63,7 @@
     "nodemon": "^2.0.15",
     "puppeteer": "^19.2.2",
     "query-string": "^8.0.3",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
