--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@ckeditor/ckeditor5-paragraph": "^35.3.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "@rsuite/icons": "^1.0.2",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.12",
     "analytics": "^0.8.1",
     "animate.css": "^4.1.1",
     "axios": "^1.1.3",
