--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "query-string": "^8.0.3",
     "ramda": "^0.28.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.4.0",
     "react-number-format": "^5.1.1",
