--- a/env/Dockerfile.server
+++ b/env/Dockerfile.server
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM node:18-buster-slim
 
 WORKDIR /app
 
@@ -7,6 +7,7 @@ WORKDIR /app
 # RUN apk --no-cache add msttcorefonts-installer fontconfig &&   update-ms-fonts &&   fc-cache -f
 
 COPY server/package.json /app/
+# RUN npm install --cpu=x64 --os=linux sharp
 
 RUN npm install --loglevel verbose --legacy-peer-deps
 
