--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,20 @@ services:
       context: .
       dockerfile: ./env/Dockerfile.fe
     ports:
-      - 3001:3001
+      - 3003:3001
     volumes:
       - ./app:/app
       - /app/node_modules
     env_file:
       - ./env/.env
-    environment:
-      - NODE_ENV=development
+    # environment:
+    #   - NODE_ENV=development
     networks:
       - app_network
     entrypoint: ['/bin/sh', '-c']
     command: 
-      # - yarn build:prod && yarn start
-      - yarn dev
+      - yarn build:prod && yarn start
+      # - yarn dev
   kha-server:
     container_name: kha-server
     restart: always
@@ -41,6 +41,6 @@ services:
     command:
       - yarn start
     ports:
-      - 3000:3000
+      - 3002:3000
     networks:
       - app_network
