--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - /app/node_modules
     env_file:
       - ./env/.env
-    # environment:
-    #   - NODE_ENV=development
+    environment:
+      - NODE_ENV=production
     networks:
       - app_network
     entrypoint: ['/bin/sh', '-c']
